monitoring/psi-prod-cluster/bases/prometheus/oauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aicoe-prometheus
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: aicoe-prometheus-tls
spec:
  ports:
  - name: aicoe-prometheus
    port: 443
    targetPort: 8443
  selector:
    app: prometheus
