monitoring/psi-prod-cluster/bases/prometheus/oauth/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aicoe-prometheus
spec:
  to:
    kind: Service
    name: aicoe-prometheus
  tls:
    termination: Reencrypt
